# nvim-rs-hello

./: Cargo.toml  README.md  hello-config-log.toml
lua/: hello.lua
src/: main.rs
