[package]
name = "hello"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
nvim-rs = { version = "0.2.0", features = ["use_tokio"] }
rmpv = "0.4"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
log-panics = { version = "2.0", features = ["with-backtrace"] }
log4rs = { version = "1.0", features = [ "toml_format" ] }

